--- a/trunk/.classpath
+++ b/trunk/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="D:/Snmp/CheckMD5/lib/mysql-connector-java-5.1.5-bin.jar"/>
-	<classpathentry kind="lib" path="D:/Snmp/CheckMD5/lib/c3p0-0.9.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.5-bin.jar"/>
+	<classpathentry kind="lib" path="lib/c3p0-0.9.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
